--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,12 @@
+image: alpine:latest
+
 pages:
   stage: deploy
   script:
-    - mkdir public
-    - cp -r * public/
+    - apk add --no-cache bash
+    - mkdir -p public
+    - cp -r ./ubo-resume.html ./public/index.html
+    - cp -r ./css ./images ./README.md ./public/ || true
   artifacts:
     paths:
       - public
